# ring-server-engine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: definitions.cmake  options.cmake  ring-server-config.cmake.in  settings.cmake
cmake/compilers/: clang.cmake  gcc.cmake  msvc.cmake
cmake/dependencies/: asio.cmake  spdlog.cmake
cmake/modules/: core.cmake  logging.cmake  network.cmake
include/ring/: pch.h  pch.hpp  version.hpp.in
include/ring/core/: cache_line.hpp  exception.hpp  export.h  export.hpp  initializer_registry.hpp  lockfree_queue.hpp  object_pool.hpp  singleton.hpp  types.h  types.hpp
include/ring/logging/: logger.h  logger.hpp
scripts/: run_tests.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  macro.h
src/logging/: CMakeLists.txt  logger.cpp
src/network/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/fixtures/: test_helpers.hpp
tests/units/: CMakeLists.txt
tests/units/core/: CMakeLists.txt  test_core.cpp
tests/units/logging/: CMakeLists.txt  test_logger.cpp
